fix: migrated from python25 to python 27

--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,9 @@
 application: httputil
-version: 1
-runtime: python
+version: 2
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 - url: /.*
-  script: main.py
+  script: main.application
